--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <nav id="navbar">
         <ul>
            <li><a href="index.html" class="menu-chosen" title="Go to Home page">Home</a></li> 
-           <li><a href="orderOnline.html" title="Order Pizza Online">Order Online</a></li>
-           <li><a href="locations.html" title="See our Locations">Locations</a></li>
-           <li><a href="pizza.html" title="See our Selection of Pizza">Pizza</a></li>
-            <li><a href="menu.html" title="See our Menu and Pricing">Menu</a></li>
+           <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
+           <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
+           <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
+            <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
         </ul>
     </nav>
     
