--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>James Hudson</title>
     <meta name="description" content="The Website of James Hudson">
     <meta charset="utf-8">
+    <meta property="og:image" content="png.png">
     <link rel="icon" href="png.png">
     <link rel="stylesheet" type="text/css" href="jameshudson.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +25,7 @@
     </header>
     <nav id="navbar">
         <ul>
-           <li><a href="index.html" class="menu-chosen" title="Go to Home page">Home</a></li> 
+           <li><a href="https://jlh1138.github.io/Website/" class="menu-chosen" title="Go to Home page">Home</a></li> 
            <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
            <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
            <li><a href="placeholder.html" title="placeholder">placeholder</a></li>
