--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1><a href="https://jlh1138.github.io/Website/">James Hudson</h1>
+        <h1><a href="https://jlh1138.github.io/Website/" text-decoration=none>James Hudson</h1>
         <a class="hmbgr" onclick="toggleNavBar()"><i class="fa fa-bars"></i></a>    
     </header>
     <nav id="navbar">
