--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
 
 <head>
-    <title>James Hudson</title>
-    <meta name="description" content="The Website of James Hudson">
+    <title>James Hudson IV</title>
+    <meta name="description" content="The Website of James Hudson IV">
     <meta charset="utf-8">
     <meta property="og:image" content="png.png">
     <link rel="icon" href="png.png">
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1>James Hudson</h1>
+        <h1>James Hudson IV</h1>
         <a class="hmbgr" onclick="toggleNavBar()"><i class="fa fa-bars"></i></a>    
     </header>
     <nav id="navbar">
