--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div id="main">
         <div class="fof">
             <h1>Error 404</h1>
+            <h2>Hi Ilana!</h2>
     	</div>
     </div>
     <button onclick="enableAutoplay()" type="button">Return to main site</button>
