--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <hr>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <video id="myVideo" autoplay="autoplay" poster="white.png" loop="loop" playsinline="playsinline" preload="metadata" data-aos="fade-up" style="width:100%;">
-    <source src="https://jameshudson.000webhostapp.com/video.mp4"
+    <source src="video_25mb.mp4"
             type="video/mp4">
         Your browser does not support MP4 Format videos or HTML5 Video.
     </video>
