--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="fof">
             <h1>Error 404</h1>
             <h1>Sunglasses at Night</h1>
-            <h2>Sunglasses inhibit one's ability to use their night vision.
+            <body>Sunglasses inhibit one's ability to use their night vision.
 
 This is because they reflect the light of the moon and stars into your eyes, making it difficult for your pupils to contract. The pupil’s job is to control how much light enters the eye, so if it can't contract, then your night vision will be impaired.
 
@@ -61,7 +61,7 @@ When you are driving at night, it is important that you take off your sunglasses
 
 Sunglasses are a fashion accessory and have a lot of benefits. They protect one's eyes from the sun, they can be used to hide one's identity, and they can make one look cool. However, there is an important downside to wearing sunglasses at night.
 
-Night vision is the ability to see in low light conditions. It is not just about being able to see in the dark but also about being able to see objects that are very close up or far away. Night vision works best when it has a lot of light available. Sunglasses inhibit this because they block out all light coming from below eye level and above eye level, which means that night vision is impaired by them because it doesn't have enough light for its purposes.</h2>
+Night vision is the ability to see in low light conditions. It is not just about being able to see in the dark but also about being able to see objects that are very close up or far away. Night vision works best when it has a lot of light available. Sunglasses inhibit this because they block out all light coming from below eye level and above eye level, which means that night vision is impaired by them because it doesn't have enough light for its purposes.</body>
     	</div>
     </div>
     <button onclick="enableAutoplay()" type="button">Return to main site</button>
