--- a/index.html
+++ b/index.html
@@ -37,25 +37,9 @@
     
     <div id="main">
         <div class="fof">
-            <h1>Error 404</h1>
+            <h1>Homepage</h1>
     	</div>
     </div>
-    <button onclick="enableAutoplay()" type="button">Return to main site</button>
-    <hr>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <video id="myVideo" autoplay="autoplay" poster="white.png" loop="loop" playsinline="playsinline" preload="metadata" data-aos="fade-up" style="width:100%;">
-    <source src="video_25mb.mp4"
-            type="video/mp4">
-        Your browser does not support MP4 Format videos or HTML5 Video.
-    </video>
-
-    <script>
-        var x = document.getElementById("myVideo");
-        function enableAutoplay() { 
-            x.autoplay = true;
-            x.load();
-            } 
-    </script> 
 
 </body> 
 </html>
