--- a/Home.html
+++ b/Home.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=https://jlh1138.github.io/Website/Error404">
 </head>
 <body>
-<p>Redirecting to <a href="{redirect_url}">{redirect_url}</a>...</p>
+    <p>If you are not redirected, <a href="https://jlh1138.github.io/Website/Error404">click here</a>.</p>
 </body>
 </html>
