--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@ body, html {
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <!--<i class="fa fa-facebook-official w3-hover-opacity"></i>-->
+    <a href="https://www.instagram.com/james.hudson.iv/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <!--<i class="fa fa-snapchat w3-hover-opacity"></i>-->
+    <!--<i class="fa fa-pinterest-p w3-hover-opacity"></i>-->
+    <!--<i class="fa fa-twitter w3-hover-opacity"></i>-->
+    <a href="https://www.linkedin.com/in/jameshudsoniv/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://www.reddit.com/r/JamesHudson/" target="_blank"><i class="fa fa-reddit w3-hover-opacity"></i></a>
+    <a href="mailto:JLH22C@fsu.edu" target="_blank"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+    <!--<a href="example" target="_blank"><i class="fa fa-example w3-hover-opacity"></i></a>-->
   </div>
 </header>
 
@@ -113,7 +116,7 @@ body, html {
     <div class="w3-col m6">
       <h3>Feedback Palette</h3>
       <p>Designing a feedback system plug-in for word processors consisting of a database of pre-written feedback a teacher can use to grade assignments in an optimized manner to improve the student’s learning experience.</p>
-      <p><a href="UROPPoster.pdf" class="w3-button w3-black"><i class="fa fa-th"> </i> Learn more</a></p>
+      <p><a href="UROPPoster.pdf" target="_blank" class="w3-button w3-black"><i class="fa fa-th"> </i> Learn more</a></p>
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="UROPThumbnail.png" alt="Thumbnail" width="700" height="394">
@@ -354,12 +357,15 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <!--<i class="fa fa-facebook-official w3-hover-opacity"></i>-->
+    <a href="https://www.instagram.com/james.hudson.iv/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <!--<i class="fa fa-snapchat w3-hover-opacity"></i>-->
+    <!--<i class="fa fa-pinterest-p w3-hover-opacity"></i>-->
+    <!--<i class="fa fa-twitter w3-hover-opacity"></i>-->
+    <a href="https://www.linkedin.com/in/jameshudsoniv/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://www.reddit.com/r/JamesHudson/" target="_blank"><i class="fa fa-reddit w3-hover-opacity"></i></a>
+    <a href="mailto:JLH22C@fsu.edu" target="_blank"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+    <!--<a href="example" target="_blank"><i class="fa fa-example w3-hover-opacity"></i></a>-->
   </div>
  <p class="w3-small">Copyright © 2023 James Hudson IV. All rights reserved.</p>
 <!-- <a class="w3-button w3-round-xxlarge w3-small w3-light-grey w3-margin-bottom" href="https://www.w3schools.com/spaces" target="_blank">Start now</a> -->
