--- a/Error404.html
+++ b/Error404.html
@@ -35,14 +35,14 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button"><img height=25px src="JLHBanner.png" alt="LOGO"></a>
+    <a href="index.html" class="w3-bar-item w3-button"><img height=25px src="JLHBanner.png" alt="LOGO"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="index.html#about" class="w3-bar-item w3-button">ABOUT</a>
       <!--<a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>-->
-      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
+      <a href="index.html#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
       <!--<a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>-->
-      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="index.html#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -353,12 +353,15 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <!--<i class="fa fa-facebook-official w3-hover-opacity"></i>-->
+    <a href="https://www.instagram.com/james.hudson.iv/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <!--<i class="fa fa-snapchat w3-hover-opacity"></i>-->
+    <!--<i class="fa fa-pinterest-p w3-hover-opacity"></i>-->
+    <!--<i class="fa fa-twitter w3-hover-opacity"></i>-->
+    <a href="https://www.linkedin.com/in/jameshudsoniv/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://www.reddit.com/r/JamesHudson/" target="_blank"><i class="fa fa-reddit w3-hover-opacity"></i></a>
+    <a href="mailto:JLH22C@fsu.edu" target="_blank"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+    <!--<a href="example" target="_blank"><i class="fa fa-example w3-hover-opacity"></i></a>-->
   </div>
  <p class="w3-small">Copyright © 2023 James Hudson IV. All rights reserved.</p>
 <!-- <a class="w3-button w3-round-xxlarge w3-small w3-light-grey w3-margin-bottom" href="https://www.w3schools.com/spaces" target="_blank">Start now</a> -->
