--- a/Home.html
+++ b/Home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://jlh1138.github.io/Website/Error404">
+    <meta http-equiv="refresh" content="0;Error404.html">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://jlh1138.github.io/Website/Error404">click here</a>.</p>
+    <p>If you are not redirected, <a href="Error404.html">click here</a>.</p>
 </body>
 </html>
