changed media links to static for w3spaces page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("AustinNight.png");
+  background-image: url("https://jameshudsoniv.github.io/Website/AustinNight.png");
   min-height: 100%;
 }
 
@@ -34,7 +34,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button"><img height=25px src="JLHBanner.png" alt="LOGO"></a>
+    <a href="#home" class="w3-bar-item w3-button"><img height=25px src="https://jameshudsoniv.github.io/Website/JLHBanner.png" alt="LOGO"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
@@ -119,7 +119,7 @@ body, html {
       <p><a href="UROPPoster.pdf" target="_blank" class="w3-button w3-black"><i class="fa fa-th"> </i> Learn more</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="UROPThumbnail.png" alt="Thumbnail" width="700" height="394">
+      <img class="w3-image w3-round-large" src="https://jameshudsoniv.github.io/Website/UROPThumbnail.png" alt="Thumbnail" width="700" height="394">
     </div>
   </div>
 </div>
@@ -205,31 +205,31 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="BridgeCongressAve.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="BridgeCongressAve">
+      <img src="https://jameshudsoniv.github.io/Website/BridgeCongressAve.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="BridgeCongressAve">
     </div>
     <div class="w3-col l3 m6">
-      <img src="StackedRocks.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="StackedRocks">
+      <img src="https://jameshudsoniv.github.io/Website/StackedRocks.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="StackedRocks">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Fountain.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Fountain">
+      <img src="https://jameshudsoniv.github.io/Website/Fountain.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Fountain">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Pistachios.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pistachios">
+      <img src="https://jameshudsoniv.github.io/Website/Pistachios.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pistachios">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="Route66.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Route66">
+      <img src="https://jameshudsoniv.github.io/Website/Route66.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Route66">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Well.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Well">
+      <img src="https://jameshudsoniv.github.io/Website/Well.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Well">
     </div>
     <div class="w3-col l3 m6">
-      <img src="GasStation.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="GasStation">
+      <img src="https://jameshudsoniv.github.io/Website/GasStation.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="GasStation">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Bats.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bats">
+      <img src="https://jameshudsoniv.github.io/Website/Bats.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bats">
     </div>
   </div>
 </div>
@@ -349,7 +349,7 @@ body, html {
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="Landis.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+    <img src="https://jameshudsoniv.github.io/Website/Landis.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
 
