--- a/Error404.html
+++ b/Error404.html
@@ -35,7 +35,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
-    <a href="index.html" class="w3-bar-item w3-button"><img height=25px src="JLHBanner.png" alt="LOGO"></a>
+    <a href="index.html" class="w3-bar-item w3-button"><img height=25px src="https://jameshudsoniv.github.io/Website/JLHBanner.png" alt="LOGO"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html#about" class="w3-bar-item w3-button">ABOUT</a>
@@ -89,7 +89,7 @@ body, html {
     <hr>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <video id="myVideo" autoplay="autoplay" poster="white.png" loop="loop" playsinline="playsinline" preload="metadata" data-aos="fade-up" style="width:100%;">
-    <source src="video_25mb.mp4"
+    <source src="https://jameshudsoniv.github.io/Website/video_25mb.mp4"
             type="video/mp4">
         Your browser does not support MP4 Format videos or HTML5 Video.
     </video>
