--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/BridgeCongressAve.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="BridgeCongressAve">
+      <a href="App.html" target="_blank"><img src="ScreenshotThumb.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="BridgeCongressAve"></a>
     </div>
     <div class="w3-col l3 m6">
       <img src="https://jameshudsoniv.github.io/Website/StackedRocks.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="StackedRocks">
