Changed links for media to media folder

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("https://jameshudsoniv.github.io/Website/AustinNight.png");
+  background-image: url("https://jameshudsoniv.github.io/Website/Media/AustinNight.png");
   min-height: 100%;
 }
 
@@ -208,28 +208,28 @@ body, html {
       <a href="App.html" target="_blank"><img src="ScreenshotThumb.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="BridgeCongressAve"></a>
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/StackedRocks.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="StackedRocks">
+      <img src="https://jameshudsoniv.github.io/Website/Media/StackedRocks.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="StackedRocks">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/Fountain.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Fountain">
+      <img src="https://jameshudsoniv.github.io/Website/Media/Fountain.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Fountain">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/Pistachios.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pistachios">
+      <img src="https://jameshudsoniv.github.io/Website/Media/Pistachios.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pistachios">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/Route66.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Route66">
+      <img src="https://jameshudsoniv.github.io/Website/Media/Route66.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Route66">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/Well.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Well">
+      <img src="https://jameshudsoniv.github.io/Website/Media/Well.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Well">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/GasStation.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="GasStation">
+      <img src="https://jameshudsoniv.github.io/Website/Media/GasStation.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="GasStation">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/Bats.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bats">
+      <img src="https://jameshudsoniv.github.io/Website/Media/Bats.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bats">
     </div>
   </div>
 </div>
@@ -349,7 +349,7 @@ body, html {
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="https://jameshudsoniv.github.io/Website/Landis.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+    <img src="https://jameshudsoniv.github.io/Website/Media/Landis.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
 
