Added Teamwork page and created class folder

--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <a href="App.html" target="_blank"><img src="ScreenshotThumb.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="BridgeCongressAve"></a>
+      <a href="IDS2141/App.html" target="_blank"><img src="IDS2141/ScreenshotThumb.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Rickroll Toolbox Simple"></a>
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://jameshudsoniv.github.io/Website/Media/StackedRocks.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="StackedRocks">
+      <a href="IDS2141/Teamwork.html" target="_blank"><img src="IDS2141/TeamworkThumb.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Teamwork"></a>
     </div>
     <div class="w3-col l3 m6">
       <img src="https://jameshudsoniv.github.io/Website/Media/Fountain.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Fountain">
