--- a/IDS2141/Sound.html
+++ b/IDS2141/Sound.html
@@ -83,7 +83,7 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
-  <h3 class="w3-center">Spatula City</h3>
+  <h3 class="w3-center">Cross Country Spatula Runners Association of North America</h3>
   <div style="text-align: center;">
     <audio controls>
         <source src="sound.mp3" type="audio/mpeg">
