Update FreeCAD Page

--- a/IDS2141/FreeCAD.html
+++ b/IDS2141/FreeCAD.html
@@ -85,12 +85,17 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">3D Modeling - FreeCAD</h3>
   <div style="text-align: center;">
-    <img class="w3-image w3-round-large" src="FreeCAD_Object1.png" alt="Object 1" width="300">
-    <p class="w3-large">This is text</p>
-    <img class="w3-image w3-round-large" src="FreeCAD_Object2.png" alt="Object 2" width="300">
-    <p class="w3-large">This is text</p>
-    <img class="w3-image w3-round-large" src="FreeCAD_Object3.png" alt="Object 3" width="300">
-    <p class="w3-large">This is text</p>
+    <p class="w3-large">Tutorial Object</p>
+    <img class="w3-image w3-round-large" src="FreeCAD/Tutorial Object.png" alt="Tutorial Object" width="300">
+    <p>The tutorial object was not what I thought it would be, then again, I’m not sure what my expectations were for it.  I was fascinated by its complexity.  Each part of it has a reason for being there.  Each taught us a new tool in FreeCAD, yet, I have not figured out any particular use for this object.  </p>
+    <p class="w3-large">Cable Holder and Desk</p>
+    <img class="w3-image w3-round-large" src="FreeCAD/Cable Holder.png" alt="Cable Holder" width="300">
+    <img class="w3-image w3-round-large" src="FreeCAD/Desk.jpg" alt="Desk" width="300">
+    <p>Since my desk is up against a wall, a wedge design was an obvious choice for me to keep my cable on the desk.  I have the unique situation that I take my laptop charging cable with me wherever I go, so it never spends too much time on my desk.  I needed something fast to implement, and fast to remove.  A wedge with a gap just wide enough for the cable to sit in means the friction from the cable being pressed against the wall is enough to hold the cable up, while also allowing the quick release of pulling on the cable to free it from the wedge.  While a simple design, it provides all the functionality I need.  </p>
+    <p class="w3-large">Unseparatable Parts</p>
+    <img class="w3-image w3-round-large" src="FreeCAD/Unseparatable Part (Part 1).png" alt="Unseparatable Part (Part 1)" width="300">
+    <img class="w3-image w3-round-large" src="FreeCAD/Unseparatable Part (Part 2).png" alt="Unseparatable Part (Part 2)" width="300">
+    <p>These two parts will not immediately separate when put together.  I initially thought about designing a clip system, but I wanted this to pe something I could take apart if I needed to.  I realized it would need to have a moving component to make sure it would not separate after being put together.  I decided a cylinder fitting inside another cylinder would be the simplest way to accomplish this.  To make sure the inner cylinder would stay in the outer cylinder, I made a tab in the outer cylinder and a notch in the inner cylinder.  The inner cylinder can slide into the outer cylinder when the tab and notch are aligned, and once the inner cylinder is rotated inside the outer cylinder, the two do not fall apart.  </p>
   </div>
   <p class="w3-large"></p>
 </div>
