--- a/IDS2141/Fabrication.html
+++ b/IDS2141/Fabrication.html
@@ -86,7 +86,11 @@ body, html {
   <h3 class="w3-center">Fabricating for a Function - Part 1</h3>
   <div style="text-align: center;">
     <p class="w3-large">The Problem</p>
-    <img class="w3-image w3-round-large" src="TheProblem.mp4" alt="Tutorial Shape" width="300">
+    <video id="The Problem" preload="metadata" data-aos="fade-up" style="width:100%;" controls>
+      <source src="TheProblem.mp4"
+              type="video/mp4">
+          Your browser does not support MP4 Format videos or HTML5 Video.
+      </video>
     <p>When using the kitchen in my dorm, I frequently need to make multiple trips to bring everything I need into the kitchen and when I need to bring my stuff back to my room.  If I had a way to temporarily prop open the door, preferably a hands free solution, this process would be much faster and less annoying.  </p>
   </div>
   <p class="w3-large"></p>
