updated Fabrication page

--- a/IDS2141/Fabrication.html
+++ b/IDS2141/Fabrication.html
@@ -87,17 +87,49 @@ body, html {
   <div style="text-align: center;">
     <p class="w3-large">The Problem</p>
     <video id="The Problem" preload="metadata" data-aos="fade-up" style="width:100%;" controls>
-      <source src="TheProblem.mp4"
+      <source src="Fabrication/TheProblem.mp4"
               type="video/mp4">
           Your browser does not support MP4 Format videos or HTML5 Video.
-      </video>
-    <p>When using the kitchen in my dorm, I frequently need to make multiple trips to bring everything I need into the kitchen and when I need to bring my stuff back to my room.  If I had a way to temporarily prop open the door, preferably a hands free solution, this process would be much faster and less annoying.  </p>
+    </video>
+    <p>When I moved into my dorm this semester, I found that The plastic cap that covers a sharp, metal part on the back of my chair was missing.  It has been annoying and things catch and snag on the exposed metal.  It would be nice to have something that could cover it so this would no longer be an inconvenience.</p>
   </div>
-  <p class="w3-large"></p>
+  <h3 class="w3-center">Fabricating for a Function - Part 2</h3>
+  <div style="text-align: center;">
+    <p class="w3-large">The Design</p>
+    <img class="w3-image w3-round-large" src="Fabrication/design.gif" alt="design gif" width="100%" style="margin-bottom: 20px;">
+    <p>This is the digital version of the chair end cap I created in Fusion360.  Using calipers, I was able to take exact measurements, measure tolerances, and get an idea of the exact dimensions this chair end cap needed to be.</p>
+    <img class="w3-image w3-round-large" src="Fabrication/measure1.jpg" alt="measure1" width="300" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Fabrication/measure2.jpg" alt="measure2" width="300" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Fabrication/measure3.jpg" alt="measure3" width="300" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Fabrication/measure4.jpg" alt="measure4" width="300" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Fabrication/measure5.jpg" alt="measure5" width="300" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Fabrication/measure6.jpg" alt="measure6" width="300" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Fabrication/measurements.png" alt="measurements" width="100%" style="margin-bottom: 20px">
+  </div>
+  <h3 class="w3-center">Fabricating for a Function - Part 3</h3>
+  <div style="text-align: center;">
+    <p class="w3-large">The Solution</p>
+    <video id="The Problem" preload="metadata" data-aos="fade-up" style="width:100%;" controls>
+      <source src="Fabrication/TheSolution.mp4"
+              type="video/mp4">
+          Your browser does not support MP4 Format videos or HTML5 Video.
+    </video>
+    <p>It took four versions to get the tolerances correct.  Each print was closer to what it needed to be, but I needed a very specific fit in order for the chair end cap to stick in the chair and not fall out when the chair was moved around.  I also decided this would be the perfect place to hide something in the dorm with my name on it.  I could hide anything under this cap, and someone later down the road could find it.  I 3D printed a tag with my phone number on it.  I laser etched the rest of my information into the back of the tag so someone could reach me even if one of the numbers broke off.  </p>
+    <img class="w3-image w3-round-large" src="Fabrication/finalFront.jpg" alt="final front view" width="100%" style="margin-bottom: 10px">
+    <p style="margin-bottom: 40px">Through the use of a filament layer change and ironing, I was able to achieve a cleaner and more polished look for the name plate.  Plastiweld was used to bond the plate to the chair end cap, ensuring it will not break off inside of the chair.  </p>
+    <img class="w3-image w3-round-large" src="Fabrication/finalBack.jpg" alt="final back view" width="100%" style="margin-bottom: 10px">
+    <p style="margin-bottom: 40px">The laser-etched back accomplished detail that may have been lost at this size on the 3D printer.  Having redundancies for keeping the information makes it more likely to last longer.  </p>
+    <img class="w3-image w3-round-large" src="Fabrication/buildingFront.jpg" alt="building front" width="400" style="margin-bottom: 20px">
+    <img class="w3-image w3-round-large" src="Fabrication/buildingBack.jpg" alt="building back" width="400" style="margin-bottom: 20px">
+    <img class="w3-image w3-round-large" src="Fabrication/buildingBackAndCap.jpg" alt="building back and cap" width="400" style="margin-bottom: 20px">
+    <img class="w3-image w3-round-large" src="Fabrication/versions.jpg" alt="version history" width="100%" style="margin-bottom: 10px">
+    <p style="margin-bottom: 40px">Version 1 fit in the metal bar, but did not stick or have the rigidity to last long.  Version 2 was sturdy enough, but it was slightly too big to fit in the bar.  Version 3, despite having been changed for smaller dimensions, expanded after coming off of the printer, warranting one last design change.  Version 4 accounted for this and fit perfectly.  It is snug enough to not fall out, but loose enough where one can pull it out.  </p>
+    <img class="w3-image w3-round-large" src="Fabrication/chair.jpg" alt="chair" width="500" style="margin-bottom: 20px">
+    <img class="w3-image w3-round-large" src="Fabrication/capOnChair.jpg" alt="cap on chair" width="500" style="margin-bottom: 20px">
+  </div>
 </div>
 
-<!-- Promo Section - "We know design" 
-<div class="w3-container w3-light-grey" style="padding:128px 16px">
+<!-- Promo Section - "We know measurediv class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Feedback Palette</h3>
