--- a/IDS2141/VirtualReality.html
+++ b/IDS2141/VirtualReality.html
@@ -84,6 +84,7 @@ body, html {
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">Virtual Reality Project - Taco Bell Coin Drop</h3>
+  <p>summary</p>
   <div style="text-align: center;">
     <p class="w3-large">Cyrus Sabet - The Test</p>
     <video id="VR Test" preload="metadata" data-aos="fade-up" style="width:100%;" controls>
@@ -91,7 +92,11 @@ body, html {
               type="video/mp4">
           Your browser does not support MP4 Format videos or HTML5 Video.
     </video>
-    <p></p>
+    <p>video description</p>
+    <img class="w3-image w3-round-large" src="Virtual Reality/Taco Bell Coin Drop Render.png" alt="render" width="100%" style="margin-bottom: 20px;">
+    <p>asset design steps</p>
+    <img class="w3-image w3-round-large" src="Virtual Reality/Taco Bell Coin Drop.png" alt="screenshot" width="100%" style="margin-bottom: 20px;">
+    <p>final project</p>
   </div>
 </div>
 
