update virtual reality

--- a/IDS2141/VirtualReality.html
+++ b/IDS2141/VirtualReality.html
@@ -84,19 +84,20 @@ body, html {
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">Virtual Reality Project - Taco Bell Coin Drop</h3>
-  <p>summary</p>
   <div style="text-align: center;">
+    <p>After countless methods, numerous attempts, and several wasted hours trying to add the ability to jump to the player’s character, I decided to go about creating a virtual reality experience that could not be experienced anywhere else, but only involved falling.  It was as I was going to bed, the idea hit me: The Taco Bell Coin Drop.  Everyone at one point in their lives has wanted to be the coin, navigating through the cracks, to find a safe landing on the winner’s platform.  It is what makes that free menu item taste that much better.  To become the coin and experience everything it experiences, this is an experience one can get nowhere else.  </p>
     <p class="w3-large">Cyrus Sabet - The Test</p>
     <video id="VR Test" preload="metadata" data-aos="fade-up" style="width:100%;" controls>
       <source src="Virtual Reality/VRTest.mp4"
               type="video/mp4">
           Your browser does not support MP4 Format videos or HTML5 Video.
     </video>
-    <p>video description</p>
-    <img class="w3-image w3-round-large" src="Virtual Reality/Taco Bell Coin Drop Render.png" alt="render" width="100%" style="margin-bottom: 20px;">
-    <p>asset design steps</p>
+    <p>After asking me what I was working on, Cyrus Sabet was voluntold to test out the Taco Bell Coin Drop.  With no knowledge of the game, where he was, what the goals were, or what the controls were, I strapped him in and told him to go for it.  Within a matter of seconds, he figured out he could not go up, so he started exploring downward.  It was not long before he found his place on the bottom platform, where he won the game by getting the essence of Baja Blast released into the atmosphere.  </p>
+    <img class="w3-image w3-round-large" src="Virtual Reality/Taco Bell Coin Drop Render.png" alt="render" width="500" style="margin-bottom: 20px;">
+    <img class="w3-image w3-round-large" src="Virtual Reality/measure.png" alt="measurements" width="500" style="margin-bottom: 20px;">
+    <p>To design the Taco Bell Coin Drop, I used Fusion 360.  I decided to start with rectangles which I revolved to make the wedge-shaped platforms.  I varied the degrees and heights, duplicated what I needed, then made the center pole.  I was able to import this into Unity with little complication.  I had to resize and orient it, but I was able to scale and position it for the player.  </p>
     <img class="w3-image w3-round-large" src="Virtual Reality/Taco Bell Coin Drop.png" alt="screenshot" width="100%" style="margin-bottom: 20px;">
-    <p>final project</p>
+    <p>For the final game, I made the skybox a Taco Bell purple.  I changed the ambient lighting to a Taco Bell orange to give the coin drop spiral a look similar to the Taco Bell one.  As a final touch to let the user know they won the game, I added colliders on the final winner’s platform that activated a donut that sprayed confetti everywhere.  I made the confetti a Baja Blast turquoise to represent the blood and essence of Taco Bell: a victory anyone will fight for.  </p>
   </div>
 </div>
 
